# Jet-Nemotron

./: .gitignore  README.md  pyproject.toml  requirements.txt
LICENSE/: code  jet_nemotron_models
jetai/evaluation/: meta_eval.py
jetai/evaluation/configs/: bbh.yaml  commonsense.yaml  cruxeval.yaml  evalplus.yaml  longbench.yaml  math_gen.yaml  math_mc.yaml  mmlu.yaml  mmlu_pro.yaml  retrieval.yaml
jetai/evaluation/lm_eval_harness/: __init__.py  evaluator.py  wrapper.py
jetai/inference/: generate.py  measure_throuput.py
jetai/modeling/: __init__.py  wrapper.py
jetai/modeling/configs/: jetlm_2B.json  jetlm_4B.json
jetai/modeling/hf/: dconv_fwdbwd.py  dynamic_conv.py  generation_config.json  jet_block.py  kv_cache.py  modeling_jet_nemotron.py
jetai/utils/: __init__.py  config.py  debug.py  dist.py  misc.py
scripts/eval/2B/: bbh.sh  code.sh  commonsense.sh  full.sh  longbench.sh  math.sh  mmlu.sh  mmlu_pro.sh  retrieval.sh
scripts/eval/4B/: bbh.sh  code.sh  commonsense.sh  full.sh  longbench.sh  math.sh  mmlu.sh  mmlu_pro.sh  retrieval.sh
