[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetai"
version = "1.0"
readme = "README.md"
description = "Jet-Nemotron: Efficient Language Model via PostNAS"
requires-python = ">=3.10"
dependencies = [
    "torch<=2.7.1", "accelerate", "transformers<=4.53.0", "datasets>=4.0.0",
    "jieba", "fuzzywuzzy", "rouge", "python-Levenshtein",
    "flash-linear-attention@git+https://github.com/jet-ai-projects/flash-linear-attention.git@jetai",
    "lm_eval@git+https://github.com/jet-ai-projects/lm-evaluation-harness.git@jetai",
]


[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip = [".slurm", "assets", "processed_data", "scripts", "slurm-logs"]

[tool.pylint]
    [tool.pylint.master]
    [tool.pylint.messages_control]
    disable = [
        "C0114",
        "C0115",
        "C0116",
        "C0209",
        "C0330",
        "C0301",
        "C0302",
        "C0415",
        "E0401",
        "E1121",
        "E1123",
        "E1101",
        "R",
        "W"
    ]
    [tool.pylint.basic]
    good-names-rgxs = "^[_a-z][_a-z0-9]?$"  # allow 1 or 2 character names
    [tool.pylint.format]
    max-line-length = 120
    max-module-lines = 5000
    [tool.pylint.design]
    max-args = 10
    max-attributes = 15
    max-parents = 10

[tool.setuptools]
packages = ["jetai"]